<resources>
    <string name="app_name">Anki Slicer</string>
    <string name="default_deck_name">ANKI_Slicer✎</string>
    <string name="addNewNote">Add Main Note</string>
    <string name="deleteEN">Reset Extra Notes</string>
    <string name="endr">End Reached</string>
    <string name="title_activity_plans_manager">Plan Manager</string>
    <string name="tv_plan_name">Plan Name:</string>
    <string name="title_activity_plan_editor">Plan Editor</string>
    <string name="tv_select_deck">Deck</string>
    <string name="tv_select_model">Model</string>
    <string name="tv_choose_dictionary">Open Dictionary Manager:</string>
    <string name="api_not_available_message">Api not available!</string>
    <string name="permission_denied">Permission Denied！</string>
    <string name="cancel_after_add">Close popup after adding</string>
    <string name="monite_clipboard">Monitor Clipboard</string>
    <string name="plan_manager_str">Plans Manager</string>
    <string name="str_added">Added</string>
    <string name="str_failed_add">Failed! Please check plan settings.</string>
    <string name="str_plan_name_should_not_be_blank">Plan name can\'t be blank!</string>
    <string name="plan_already_exists">Plan name already exists!</string>
    <string name="dialog_note">Note</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_tag">Tag</string>
    <string name="tag_cant_be_blank">Tag can\'t be blank!</string>
    <string name="definition_not_found">Definition not found</string>
    <string name="str_about">About</string>
    <string name="about_message">I\'m Zha Maomiao(aka mmjang), this project is open-sourced. <a href="https://github.com/mmjang/ankihelper">Check it out on github.</a></string>
    <string name="confirm_deletion">Delete?</string>
    <string name="save_plan_error_all_blank">Failed to save. All fields are empty!</string>
    <string name="plan_anki_not_started">please start ankidroid first!</string>
    <string name="btn_open_custom_dicitonary_str">Custom Dictionaries</string>
    <string name="add_custom_dictionary_str">Import custom dictionary</string>
    <string name="delete_all_custom_dictionary">Clear imported dictionaries</string>
    <string name="confirm_add_default_plan">No plans found, add default?</string>
    <string name="default_plan_added">Default plan added, check out at plans manager</string>
    <string name="btn_help_str">❓Help</string>
    <string name="add_main_note">Add As Main Note</string>
    <string name="btn_about_and_support_str">Donate</string>
    <string name="confirm_add_default_plan_when_exists_already">已存在方案，确认添加默认方案（柯林斯词典）？</string>
    <string name="btn_add_default_plan_str">add default plan</string>
    <string name="duplicate_plan_name_complain">已存在默认方案，不得重复添加。可在方案管理器中删除后再添加。</string>
    <string name="toast_no_available_plan">没有任何可用划词方案，无法正常使用，请前往Anki划词助手主界面设置</string>
    <string name="warn_delete">Are you sure to delete selected %d cards?(can\'t undo)</string>
    <string name="warn_deletedict">Are you sure to delete selected %d dict(s)?</string>
    <string name="warn_move">Are you sure to move %1$d cards from [ %2$s ] to [ %3$s ]?</string>
	<string name="noseletion">Noting Selected</string>
    <string name="browseall">Browse All Decks</string>
    <string name="bookmarkupdated">Bookmark updated</string>
    
    <item type="id" name="valid_counter"></item>
    <item type="id" name="currGrossHeader"></item>
    <item type="id" name="Pos"></item>
</resources>
